[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,6 +10,8 @@
         <br>
         <div class="center text-big bold">
             Hi! I am AnonWolf99.
+            <h4> I'm a SELF-LEARNER</h4>
+            Learning to code
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
