[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,5 +4,28 @@
             Article ONE || Bhupinder Singh
         </title>
     </head>
+    <body>
+        <div>
+            <o href="/">HOME</o> 
+        </div>
+        <hr/>
+        <h3>
+            Article ONE
+        </h3>
+        <div>
+            Aug 10, 2017
+        </div>
+        <div>
+            <p>
+                This is the conent for my first ARTICLE.This is the conent for my first ARTICLE.This is the conent for my first ARTICLE.This is the conent for my first ARTICLE.This is the conent for my first ARTICLE.This is the conent for my first ARTICLE.This is the conent for my first ARTICLE.
+            </p>
+            <p>This is the conent for my first ARTICLE.This is the conent for my first ARTICLE.This is the conent for my first ARTICLE.This is the conent for my first ARTICLE.This is the conent for my first ARTICLE.This is the conent for my first ARTICLE.This is the conent for my first ARTICLE. 
+            </p>
+            <p>
+                This is the conent for my first ARTICLE.This is the conent for my first ARTICLE.This is the conent for my first ARTICLE.This is the conent for my first ARTICLE.This is the conent for my first ARTICLE.This is the conent for my first ARTICLE.This is the conent for my first ARTICLE.
+            </p>
+        </div>
+        
+    </body>
     
 </html>
